--- a/calligraphy.html
+++ b/calligraphy.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Calligraphy - Kristen Lee Calligraphy Clone</title>
+    <link rel="icon" href="/images/favicon.png" />
   </head>
   <body>
     <!-- SIDE NAV -->
