--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Contact - Kristen Lee Calligraphy Clone</title>
+    <link rel="icon" href="/images/favicon.png" />
   </head>
 
   <body>
