--- a/pyrography.html
+++ b/pyrography.html
@@ -111,7 +111,7 @@
     </div>
 
     <div id="bot-control">
-      <a class="bot-btn" href="">INQUIRE</a>
+      <a class="bot-btn" href="contact.html">INQUIRE</a>
     </div>
   </body>
   <!-- FOOTER SECTION -->
