--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
     ></script>
     <title>About - Kristen Lee Calligraphy Clone</title>
+    <link rel="icon" href="/images/favicon.png" />
   </head>
   <body>
     <!-- HEAD SECTION -->
